# mytool

./: CMakeLists.txt  mytool.rb  mytool.rb.in
.github/workflows/: main.yml
cmake/: gen_brew_rb.cmake
